forge/tests/error/froglet-ast-bind.frg
#lang forge/froglet

pred foo {
  bind foo = true  {}
}
